--- a/front-end/src/containers/ServiceAreas/styles.scss
+++ b/front-end/src/containers/ServiceAreas/styles.scss
@@ -1,9 +1,13 @@
 @import "../../styles/variables/variables";
 
 .div-service-area-container {
+  background-color: #FAFAFA;
+
   .div-service-area-banner {
     position: relative;
     height: 350px;
+    background-color: white;
+    border-bottom: 1px solid #707070B0;
 
     .div-service-area-title {
       position: relative;
@@ -46,10 +50,11 @@
   }
 
   .div-service-areas {
-    margin-bottom: 200px;
+    padding-bottom: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: calc(100% - 720px);
 
     .div-service-areas-title {
       color: #5B5B5B;
@@ -61,7 +66,7 @@
       display: grid;
       grid-auto-flow: column;
       grid-template-rows: repeat(9, 1fr);
-      grid-auto-columns: 230px;
+      grid-auto-columns: 270px;
     
       .service-area {
         color: $text-light-gray;
@@ -73,6 +78,23 @@
           text-decoration: underline;
         }
       }
+    }
+  }
+
+  .div-service-area-bottom {
+    padding: 0 200px;
+
+    .div-separator {
+      height: 1px;
+      background-color: #707070B0
+    }
+
+    .bottom-form {
+      padding: 100px 0;
+      width: 540px;
+      background-color: transparent;
+      margin-left: 50%;
+      transform: translateX(-50%);
     }
   }
 }
