--- a/front-end/src/containers/Modals/MenuModal/styles.scss
+++ b/front-end/src/containers/Modals/MenuModal/styles.scss
@@ -174,6 +174,7 @@
         .div-ingredients-list-title {
           color: #080808;
           margin-bottom: 10px;
+          font-family: 'Montserrat-SemiBold';
         }
 
         .div-ingredients {
@@ -206,6 +207,7 @@
 
         .div-special-instructions-title {
           color: #080808;
+          font-family: 'Montserrat-SemiBold';
         }
 
         .input-special-instructions {
