--- a/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
+++ b/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
@@ -10,9 +10,9 @@
   display: flex;
   flex-direction: column;
   background: white;
-  border-radius: 10px;
+  border-radius: 6px;
   box-shadow: $shadow-primary;
-  padding: 50px 45px;
+  padding: 40px 45px 36px;
   color: $text-light-gray;
 
   .button {
