--- a/front-end/src/containers/Settings/EditProfile/styles.scss
+++ b/front-end/src/containers/Settings/EditProfile/styles.scss
@@ -3,80 +3,74 @@
 .div-edit-profile-container {
   padding: 0 50px;
 
-  .div-profile-list {
+  .div-profile-info {
+    flex-grow: 1;
+    color: $text-light-gray;
     display: flex;
 
-    .div-profile-info {
-      flex-grow: 1;
-      color: $text-light-gray;
-      display: flex;
-      margin-right: 150px;
-  
-      .div-profile-info-title-list {
-        margin-right: 140px;
-        .div-profile-info-title {
-          margin-bottom: 50px;
-        }
-      }
-      .div-profile-info-text-list {
-        .div-profile-info-text {
-          margin-bottom: 50px;
-        }
+    .div-profile-info-title-list {
+      margin-right: 140px;
+      flex-shrink: 0;
+
+      .div-profile-info-title {
+        margin-bottom: 50px;
       }
     }
-  
-    .div-profile-edit {
-      display: flex;
-      flex-direction: column;
-  
-      .button {
-        width: 95px;
-        height: 40px;
-        font-size: $small-font-size;
-        border-radius: 0;
-        margin-bottom: 40px;
+    .div-profile-info-text-list {
+      .div-profile-info-text {
+        margin-bottom: 50px;
       }
-    } 
-  }
 
-  .div-profile-update-password {
-    .div-profile-update-password-title {
-      color: $green-primary;
-      margin-bottom: 25px;
-    }
+      .clickable {
+        color: $green-primary;
+        margin-bottom: 30px;
+      }
 
-    .div-profile-update-password-inputs {
-      display: flex;
-      align-items: flex-end;
-
-      .div-profile-update-password-input {
-        .div-profile-update-password-input-title {
-          color: $text-light-gray;
-          font-size: $mobile-regular-font-size;
-        }
-
-        input {
-          width: 220px;
-          height: 43px;
-          margin-top: 5px;
-          margin-right: 30px;
-          padding: 10px;
-          border: 1px solid $light-green-primary;
-          border-radius: 2px;
-          caret-color: $green-primary;
+      .div-profile-update-password-inputs {
+        display: flex;
+        align-items: flex-end;
   
-          &:focus {
-            border: 1px solid $green-primary;
+        .div-profile-update-password-input {
+          .div-profile-update-password-input-title {
+            color: $text-light-gray;
+            font-size: $mobile-regular-font-size;
+          }
+  
+          input {
+            width: 220px;
+            height: 43px;
+            margin-top: 5px;
+            margin-right: 30px;
+            padding: 10px;
+            border: 1px solid $light-green-primary;
+            border-radius: 2px;
+            caret-color: $green-primary;
+    
+            &:focus {
+              border: 1px solid $green-primary;
+            }
           }
         }
-      }
-
-      .button {
-        width: 116px;
-        height: 43px;
-        border-radius: 6px;
-        font-size: $mobile-regular-font-size;
+  
+        .button {
+          width: 116px;
+          height: 43px;
+          border-radius: 3px;
+          font-size: $mobile-regular-font-size;
+        }
       }
     }
+  }
+
+  .btn-edit {
+    border-radius: 3px;
+    background-color: #525252;
+    font-size: $small-font-size;
+    font-family: 'Montserrat-Medium';
+    width: 158px;
+    height: 51px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 100px;
   }
 }
