[FE] styling fixes. wording update.  prevent auto-complete highlight

--- a/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
+++ b/front-end/src/containers/Modals/ShareExperienceModal/styles.scss
@@ -8,6 +8,7 @@
   transform: translate(-50%, -50%);
   margin-bottom: 100px;
   border: 0.5px solid #EDF0F7;
+  border-radius: 3px;
   background-color: white;
   box-shadow: $shadow-primary;
 
