--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -13,6 +13,7 @@
 
       span {
         font-size: $small-font-size;
+        font-family: 'Montserrat-Medium';
       }
 
       .span-highlighted {
