--- a/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
+++ b/front-end/src/containers/SideCart/components/SideCartSummary/styles.scss
@@ -30,6 +30,15 @@
     }
   }
 
+  .side-cart-summary-preferences {
+    a {
+      color: $green-primary;
+      font-size: $mobile-regular-font-size - 2;
+    }
+    
+    text-align: center;
+  }
+
   .side-cart-summary-free-delivery {
     font-size: $mobile-regular-font-size;
     font-family: 'Montserrat-Light';
