--- a/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
+++ b/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
@@ -9,10 +9,10 @@
   flex-direction: column;
   margin: 20px;
   height: calc(100% - 40px);
+  overflow: hidden;
 
   .img-featured-menu {
     height: 250px;
-    margin-top: 8px;
     border-bottom: 1px solid $border-gray;
   }
 
