--- a/front-end/src/containers/ServiceAreas/styles.scss
+++ b/front-end/src/containers/ServiceAreas/styles.scss
@@ -6,6 +6,8 @@
   .div-service-area-banner {
     position: relative;
     height: 300px;
+    background-color: rgb(243, 244, 248);
+    box-shadow: $shadow-primary;
     
     .div-service-area-title {
       position: relative;
@@ -57,7 +59,7 @@
   }
 
   .div-service-areas {
-    padding-bottom: 200px;
+    padding-bottom: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -67,19 +69,20 @@
       color: #5B5B5B;
       text-align: center;
       margin: 80px 0;
+      font-size: $small-font-size;
     }
 
     .div-service-areas-grid {
       display: grid;
       grid-auto-flow: column;
       grid-template-rows: repeat(9, 1fr);
-      grid-auto-columns: 270px;
+      grid-auto-columns: 230px;
     
       .service-area {
         color: $text-light-gray;
         font-size: $mobile-regular-font-size;
-        height: 50px;
-        line-height: 50px;
+        height: 70px;
+        line-height: 70px;
 
         &:hover {
           text-decoration: underline;
