--- a/front-end/src/containers/Modals/InvitationModal/styles.scss
+++ b/front-end/src/containers/Modals/InvitationModal/styles.scss
@@ -3,6 +3,8 @@
 .invitation-modal {
   position: absolute;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   left: 50%;
   top: 100px;
   transform: translate(-50%);
@@ -10,122 +12,71 @@
   background: white;
   border-radius: 6px;
   overflow: hidden;
+  background-color: $extra-light-gray;
+  padding: 35px 80px;
 
-  width: 1572px;
-  height: 685px;
+  width: 614px;
 
   .invitation-modal-form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 
-    .div-title {
-      font-size: 22px;
+    .span-title {
+      font-size: $small-font-size;
       font-family: 'Montserrat-SemiBold';
-      width: 100%;
     }
 
     .span-link {
       color: $text-primary;
-      font-size: $mobile-regular-font-size;
+      font-size: 11px;
       font-family: 'Montserrat-SemiBold';
       text-decoration: underline;
       margin-top: 40px;
     }
 
     .button {
-      height: 80px;
+      height: 63px;
       width: 100%;
       background-color: #515151;
       border-radius: 0;
       margin-top: 20px;
-
-      img {
-        height: 20px;
-        margin-right: 20px;
-      }
+      font-size: $mobile-regular-font-size;
     }
 
     input {
       border: 1px solid $text-light-gray;
       background-color: transparent;
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size;
       padding: 0 20px;
-      height: 60px;
+      height: 50px;
       width: 100%;
       margin-top: 20px;
     }
+  }
 
-    .referral-code-title {
-      color: #C7C5C5;
-      font-size: $mobile-regular-font-size;
+  .invitation-modal-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 25px;
+
+    .invitation-modal-title {
+      font-size: $small-font-size;
       font-family: 'Montserrat-SemiBold';
-      margin-top: 30px;
     }
-
-    .referral-code {
-      width: 290px;
-      height: 60px;
+    .invitation-modal-description {
+      width: 60%;
+      font-size: $small-font-size;
+      color: $text-light-gray;
       margin-top: 10px;
-      line-height: 60px;
       text-align: center;
-      background-color: #F1F1F1;
-      font-size: 30px;
-      font-family: 'Montserrat-SemiBold';
-      border: 1px dashed #C7C5C5;
-    }
-
-    .social-shares {
-      img {
-        height: 35px;
-        margin: 0 10px;
-      }
     }
   }
 
-  .invitation-modal-left {
-    width: 50%;
-    background-color: $extra-light-gray;
-    padding: 70px 120px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    .invitation-modal-header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      .invitation-modal-title {
-        font-size: 22px;
-        font-family: 'Montserrat-SemiBold';
-      }
-      .invitation-modal-description {
-        width: 60%;
-        color: $text-light-gray;
-        margin-top: 10px;
-      }
-    }
-  }
-
-  .invitation-modal-right {
-    width: 50%;
-    padding: 30px 40px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-    .invitation-modal-logo {
-      .img-close {
-        height: 20px;
-        float: right;
-      }
-
-      .img-prize {
-        height: 210px;
-        margin-top: 50px;
-        margin-left: 50%;
-        transform: translateX(-50%);
-      }
-    }
+  .img-prize {
+    height: 157px;
   }
 }
