--- a/front-end/src/containers/GiftCards/components/GiftCardPanel/styles.scss
+++ b/front-end/src/containers/GiftCards/components/GiftCardPanel/styles.scss
@@ -12,7 +12,7 @@
 
   .giftcard-panel-instructions {
     margin-left: 60px;
-    margin-top: 30px;
+    margin-top: 60px;
     margin-right: 40px;
 
     .giftcard-panel-instruction {
@@ -32,14 +32,15 @@
   }
 
   .btn-redeem-code {
-    border: 1px solid #B7CBB8;
-    background-color: transparent;
+    border: 2.5px solid #B7CBB8;
+    background-color: #FAFBFC;
     color: $green-secondary;
     font-size: $mobile-regular-font-size;
     width: 184px;
     height: 63px;
-    border-radius: 0;
+    border-radius: 4;
     box-shadow: unset;
+    margin-top: 30px;
     margin-left: 50%;
     transform: translateX(-50%);
 
