[FE] update date picker on gift card page

--- a/front-end/src/containers/GiftCards/components/GiftDatePicker/styles.scss
+++ b/front-end/src/containers/GiftCards/components/GiftDatePicker/styles.scss
@@ -3,15 +3,35 @@
 .gift-datepicker {
   position: relative;
 
-  input {
-    width: 100%;
-  }
+  // input {
+  //   width: 100%;
+  // }
 
   .react-datepicker-wrapper {
     width: 100%;
 
     .react-datepicker__input-container {
       width: 100%;
+
+      .gift-datepicker-input {
+        display: flex;
+
+        .input-month {
+          width: 50%;
+          margin-right: 10px;
+        }
+
+        .input-day {
+          width: 25%;
+          margin-right: 10px;
+          margin-left: 10px;
+        }
+
+        .input-year {
+          width: 25%;
+          margin-left: 10px;
+        }
+      }
     }
   }
 
