--- a/front-end/src/containers/Authentication/components/ForgotPasswordForm/styles.scss
+++ b/front-end/src/containers/Authentication/components/ForgotPasswordForm/styles.scss
@@ -11,14 +11,15 @@
     flex-direction: row;
     align-items: center;
     background: $extra-light-green;
-    height: 135px;
-    line-height: 135px;
+    height: 100px;
 
     .forgot-password-form-header-title {
       width: 100%;
-      font-size: 40px;
-      font-family: 'Montserrat-Medium';
+      line-height: 100px;
+      font-family: 'Montserrat-Bold';
+      font-size: 28px;
       text-align: center;
+      color: $text-primary;
     }
   }
 
@@ -28,24 +29,30 @@
     align-items: center;
 
     .forgot-password-form-instruction {
+      font-size: $mobile-regular-font-size;
       color: $text-light-gray;
-      width: 50%;
+      width: 60%;
       margin-top: 30px;
     }
 
     .forgot-password-form-input {
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 0 40px;
       width: 100%;
+      
+      span {
+        font-size: $mobile-regular-font-size;
+        font-family: 'Montserrat-Medium';
+      }
 
       input {
         width: 100%;
-        height: 80px;
-        margin-top: 10px;
-        padding: 0 20px;
+        height: 53px;
+        margin-top: 5px;
+        padding: 0 10px;
         border: 1px solid $light-green-primary;
         border-radius: 4px;
-        font-size: $footer-secondary-font-size;
+        font-size: $small-font-size;
         caret-color: $green-primary;
       }
 
@@ -57,8 +64,9 @@
     .btn-reset {
       margin: 20px 40px 0;
       width: calc(100% - 80px);
-      height: 80px;
+      height: 56px;
       border-radius: 4px;
+      font-size: $mobile-regular-font-size;
     }
   }
 
@@ -68,6 +76,8 @@
     margin: 40px 0;
 
     a {
+      font-family: 'Montserrat-Medium';
+      font-size: $mobile-regular-font-size;
       color: $text-light-gray;
       text-decoration: underline;
     }
